# existence.app

./: .gitignore  .replit  2000.html  2010.html  2020.html  2030.html  2040.html  2050.html  README.md  career_sleeves.py  career_sleeves_v2.py  career_spiders.py  index.html  main.py  passenger_wsgi.py  pyproject.toml  replit.nix  requirements.txt  sample_scrape_output.json  scrape_runtime_config.json  script.js  styles.css  wage_calculator.py
scrapy_career/: scrapy.cfg
scrapy_career/career_spiders/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_career/career_spiders/spiders/: career_spiders.py
static/: script.js  styles.css
templates/: 2000.html  2010.html  2020.html  2030.html  2040.html  2050.html  _account_nav.html  aspiration.html  auth_account.html  auth_customers.html  auth_forgot_password.html  auth_login.html  auth_message.html  auth_register.html  auth_reset_password.html  auth_two_factor.html  auth_two_factor_setup.html  comic.html  enlightenment.html  genesis.html  immersion.html  index.html  synergy.html  toadstools.html  transcendence.html  wagecalculator.html
tests/: test_auth_account_modes.py  test_career_sleeves.py  test_career_sleeves_v2.py  test_main_ranking.py  test_scrape_endpoint.py  test_wage_calculator.py
