[tool.poetry]
name = "existence-app"
version = "0.12.0"
description = "A web application for exploring XKCD comics and job listings."
authors = ["ThijsVanZon <thijs.vanzon@existenceinitiative.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Flask = "^2.3.3"
requests = "^2.32.3"
Jinja2 = "^3.1.4"
scrapy = "^2.11.2"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
debugpy = "^1.6.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
