[tool.poetry]
name = "existence-app"
version = "0.12.0"
description = "A web application for exploring XKCD comics and job listings."
authors = ["ThijsVanZon <thijs.vanzon@existenceinitiative.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Flask = "^3.1.0"
requests = "^2.32.4"
Jinja2 = "^3.1.6"
scrapy = "^2.13.3"
aiohttp = ">=3.10.11"
Twisted = ">=24.11.0"
Werkzeug = ">=3.0.6"
urllib3 = ">=2.5.0"
cryptography = ">=44.0.1"
protobuf = ">=5.29.5"
certifi = ">=2025.1.31"
setuptools = ">=78.1.1"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
debugpy = "^1.6.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
